--- a/contemporary.css
+++ b/contemporary.css
@@ -259,7 +259,7 @@ h2 {
 .lower-wave {
   z-index: 2;
   position: absolute;
-  bottom: 0px;
+  bottom: -1px; /* fix for Safari alignment */
   width: 100%;
   height: min(10vw, 200px);
   background-image: url('data:image/svg+xml;utf8,<svg%20%20 data-name="Layer 1"%20%20 viewBox="0 0 1200 110.1677"%20%20 preserveAspectRatio="none"%20%20 version="1.1"%20%20 id="svg834"%20%20 width="1200"%20%20 height="110.1677"%20%20 xmlns="http://www.w3.org/2000/svg"%20%20 xmlns:svg="http://www.w3.org/2000/svg">%20 <path%20%20%20%20 d="m 321.39,53.727696 c 58,10.79 114.16,30.13 172,41.86 82.39,16.720004 168.19,17.730004 250.45,0.39 79.94,-16.81 162.83,-57.81 241.82,-78.64 70.05,-18.4799995 146.53,-26.0899995 214.34,-3 V 110.1677 H 0 V 82.817696 a 600.21,600.21 0 0 1 321.39,-29.09 z"%20%20%20%20 class="shape-fill"%20%20%20%20 id="path832" /></svg>');
@@ -441,7 +441,7 @@ h2 {
   height: 120px;
   margin-top: 40px;
 
-  transition: background-color 0.8s ease;
+  transition: background-color 0.8s ease, transform 0.1s linear;
 }
 
 .shadow-reveal {
@@ -541,10 +541,11 @@ Desktop-first makes it easier to encapsulate this behavior */
 } /* End of media query */
 
 .project-container li img {
-  width: min(170px, 50vw);
-  height: min(170px, 50vw);
+  width: min(186px, 50vw);
+  height: min(186px, 50vw);
+
   border-radius: 100%;
-  outline: 8px solid rgb(43, 30, 89);
+  border: 8px solid rgb(43, 30, 89);
 
   position: relative;
 }
@@ -603,7 +604,7 @@ Desktop-first makes it easier to encapsulate this behavior */
 
 .bottom-angle {
   background-image: url('angle-inverted.svg');
-  bottom: 0px;
+  bottom: -1px; /* Safari alignment fix */
 }
 
 .technical-section {
