--- a/contemporary.css
+++ b/contemporary.css
@@ -263,7 +263,7 @@ h2 {
   bottom: -1px; /* fix for Safari alignment */
   width: 100%;
   height: min(13vw, 200px);
-  background-image: url('wave-margin.svg');
+  background-image: url("data:image/svg+xml,%3Csvg width='1200' height='136' viewBox='0 0 1200 136' fill='none' xmlns='http://www.w3.org/2000/svg' preserveAspectRatio='none'%3E%3Cpath d='M321.39 66.7277C379.39 77.5177 435.55 96.8577 493.39 108.588C575.78 125.308 661.58 126.318 743.84 108.978C823.78 92.1677 906.67 51.1677 985.66 30.3377C1055.71 11.8577 1132.19 4.2477 1200 27.3377V136H0V95.8177C102.466 56.9635 213.613 46.9032 321.39 66.7277Z' fill='black'/%3E%3C/svg%3E");
   background-size: 100% 100%;
   background-repeat: no-repeat;
   background-position: right 0px bottom 0px;
