--- a/experimental-contemporary.css
+++ b/experimental-contemporary.css
@@ -9,8 +9,29 @@
 :root {
   --copy-color: rgb(234, 232, 255);
   --header-color: rgb(139, 209, 255);
+  --scrollbar-background: #08080a40;
   --copy-size: 1.15rem;
   --lex-family: 'Lexend', 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+/* WebKit scrollbar styles */
+html::-webkit-scrollbar {
+  background-color: var(--scrollbar-background);
+  width: 12px;
+}
+
+html::-webkit-scrollbar-thumb {
+  background-color: #335;
+  border-radius: 4px;
+  background-clip: content-box;
+}
+
+html::-webkit-scrollbar-thumb:hover {
+  background-color: #446;
+}
+
+html::-webkit-scrollbar-thumb:active {
+  background-color: #557;
 }
 
 @media (min-width: 768px) {
