--- a/experimental-contemporary.css
+++ b/experimental-contemporary.css
@@ -811,3 +811,45 @@ footer a:active {
   padding: 1rem;
   position: fixed;
 }
+
+.modal {
+  --modal-width: min(85vw, 80ch);
+  --modal-height: 85vh;
+  transform: translate(-50%, -50%);
+  z-index: 4;
+  border-radius: 16px;
+  background-color: #446;
+  box-shadow: 16px 16px 0 50vmax #0008;
+  position: fixed;
+  display: none;
+  overflow: scroll;
+}
+
+.modal h2,
+.modal h3 {
+  margin-bottom: 0.5rem;
+}
+.modal p {
+  margin-bottom: 1rem;
+}
+
+.modal-close {
+  z-index: 999;
+  cursor: pointer;
+  position: sticky;
+  left: 100%;
+  background-color: transparent;
+  width: 60px;
+  height: 60px;
+  border: none;
+  border-top-right-radius: 16px;
+  border-bottom-left-radius: 16px;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='gainsboro' class='bi bi-x' viewBox='0 0 16 16'%3E%3Cpath d='M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z'/%3E%3C/svg%3E");
+  background-repeat: no-repeat;
+  background-size: 32px;
+  background-position: 50%;
+}
+
+.modal-close:hover {
+  background-color: #e11;
+}
