--- a/experimental-contemporary.css
+++ b/experimental-contemporary.css
@@ -9,28 +9,28 @@
 :root {
   --copy-color: rgb(234, 232, 255);
   --header-color: rgb(139, 209, 255);
-  --scrollbar-background: #08080a40;
+  --scrollbar-background: #08080a80;
   --copy-size: 1.15rem;
   --lex-family: 'Lexend', 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 /* WebKit scrollbar styles */
-html::-webkit-scrollbar {
+*::-webkit-scrollbar {
   background-color: var(--scrollbar-background);
   width: 12px;
 }
 
-html::-webkit-scrollbar-thumb {
+*::-webkit-scrollbar-thumb {
   background-color: #335;
   border-radius: 4px;
   background-clip: content-box;
 }
 
-html::-webkit-scrollbar-thumb:hover {
+*::-webkit-scrollbar-thumb:hover {
   background-color: #446;
 }
 
-html::-webkit-scrollbar-thumb:active {
+*::-webkit-scrollbar-thumb:active {
   background-color: #557;
 }
 
@@ -822,7 +822,8 @@ footer a:active {
   box-shadow: 16px 16px 0 50vmax #0008;
   position: fixed;
   display: none;
-  overflow: scroll;
+  overflow-y: scroll;
+  overscroll-behavior: contain;
 }
 
 .modal h2,
@@ -833,23 +834,44 @@ footer a:active {
   margin-bottom: 1rem;
 }
 
-.modal-close {
-  z-index: 999;
-  cursor: pointer;
-  position: sticky;
-  left: 100%;
-  background-color: transparent;
-  width: 60px;
-  height: 60px;
-  border: none;
-  border-top-right-radius: 16px;
-  border-bottom-left-radius: 16px;
+.modal-close::before,
+.modal-close:hover::before {
+  /* Icon delegated to pseudoelement to avoid z-index issues with position: sticky */
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='gainsboro' class='bi bi-x' viewBox='0 0 16 16'%3E%3Cpath d='M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z'/%3E%3C/svg%3E");
   background-repeat: no-repeat;
   background-size: 32px;
   background-position: 50%;
 }
 
-.modal-close:hover {
-  background-color: #e11;
+.modal-close {
+  cursor: pointer;
+  position: sticky;
+  top: 0px;
+  left: 100%;
+  background-color: transparent;
+  width: 60px;
+  height: 60px;
+  border: none;
+}
+
+.modal-close::before {
+  content: '';
+  width: 40px;
+  height: 40px;
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  background-color: #0004;
+  border-radius: 50%;
+}
+
+.modal-close:hover::before {
+  content: '';
+  width: 40px;
+  height: 40px;
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  background-color: #f00;
+  border-radius: 50%;
 }
