--- a/experimental-contemporary.css
+++ b/experimental-contemporary.css
@@ -815,10 +815,11 @@ footer a:active {
 .modal {
   --modal-width: min(85vw, 80ch);
   --modal-height: 85vh;
+  --close-box-size: 60px;
   transform: translate(-50%, -50%);
   z-index: 4;
   border-radius: 16px;
-  background-color: #446;
+  background-color: #335;
   box-shadow: 16px 16px 0 50vmax #0008;
   position: fixed;
   display: none;
@@ -826,12 +827,36 @@ footer a:active {
   overscroll-behavior: contain;
 }
 
+.modal::-webkit-scrollbar-thumb {
+  background-color: #557;
+}
+.modal::-webkit-scrollbar-thumb:hover {
+  background-color: #668;
+}
+.modal::-webkit-scrollbar-thumb:active {
+  background-color: #779;
+}
+
+/* Compensate for sticky close button: */
+.modal > :nth-child(2) {
+  margin-top: calc(-3/5 * var(--close-box-size));
+}
+
 .modal h2,
 .modal h3 {
   margin-bottom: 0.5rem;
 }
+
+.modal h3 {
+  margin-top: 2rem;
+}
+
 .modal p {
   margin-bottom: 1rem;
+}
+
+.modal p:last-of-type {
+  margin-bottom: 3rem;
 }
 
 .modal-close::before,
@@ -844,23 +869,24 @@ footer a:active {
 }
 
 .modal-close {
+  --close-box-margin: 10px;
   cursor: pointer;
   position: sticky;
   top: 0px;
   left: 100%;
   background-color: transparent;
-  width: 60px;
-  height: 60px;
+  width: var(--close-box-size);
+  height: var(--close-box-size);
   border: none;
 }
 
 .modal-close::before {
   content: '';
-  width: 40px;
-  height: 40px;
+  width: calc(var(--close-box-size) - 2*var(--close-box-margin));
+  height: calc(var(--close-box-size) - 2*var(--close-box-margin));
   position: absolute;
-  top: 10px;
-  left: 10px;
+  top: var(--close-box-margin);
+  left: var(--close-box-margin);
   background-color: #0004;
   border-radius: 50%;
 }
@@ -872,6 +898,11 @@ footer a:active {
   position: absolute;
   top: 10px;
   left: 10px;
-  background-color: #f00;
+  background-color: #c44;
   border-radius: 50%;
+}
+
+.modal-content {
+  margin-left: 1.5rem;
+  margin-right: 2.5rem;
 }
