--- a/experimental-contemporary.css
+++ b/experimental-contemporary.css
@@ -579,6 +579,7 @@ Desktop-first makes it easier to encapsulate this behavior */
   border: 8px solid var(--border-color);
 
   position: relative;
+  z-index: -1;
 }
 
 @media (max-width: 500px) {
