Apply revisions to production index

--- a/contemporary.css
+++ b/contemporary.css
@@ -9,8 +9,29 @@
 :root {
   --copy-color: rgb(234, 232, 255);
   --header-color: rgb(139, 209, 255);
+  --scrollbar-background: #08080a80;
   --copy-size: 1.15rem;
   --lex-family: 'Lexend', 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+/* WebKit scrollbar styles */
+*::-webkit-scrollbar {
+  background-color: var(--scrollbar-background);
+  width: 12px;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #335;
+  border-radius: 4px;
+  background-clip: content-box;
+}
+
+*::-webkit-scrollbar-thumb:hover {
+  background-color: #446;
+}
+
+*::-webkit-scrollbar-thumb:active {
+  background-color: #557;
 }
 
 @media (min-width: 768px) {
@@ -431,11 +452,14 @@ h2 {
 }
 
 .image-shadow {
+  --parallax-scroll: 65px;
+  --fade-shadow-color: rgb(12, 5, 23);
+  --reveal-shadow-color: rgb(36, 18, 69);
+
   z-index: -1;
   position: absolute;
   border-radius: 20px;
-  background-color: rgb(12, 6, 23);
-  --parallax-scroll: 65px;
+  background-color: var(--fade-shadow-color);
 
   /* Switches to landscape on media query */
   width: calc(80px + 50vw);
@@ -446,7 +470,7 @@ h2 {
 }
 
 .shadow-reveal {
-  background-color: rgb(36, 18, 69);
+  background-color: var(--reveal-shadow-color);
 }
 
 .project-details {
@@ -464,16 +488,20 @@ h2 {
   margin-top: -4rem;
 }
 
-.project-details a {
+.project-details a,
+.modal a {
   color: #dc5de8;
 }
-.project-details a:visited {
+.project-details a:visited,
+.modal a:visited {
   color: #dc5de8;
 }
-.project-details a:hover {
+.project-details a:hover,
+.modal a:hover {
   color: #f9b9ff;
 }
-.project-details a:active {
+.project-details a:active,
+.modal a:active {
   color: #fbd1ff;
 }
 
@@ -501,8 +529,9 @@ Desktop-first makes it easier to encapsulate this behavior */
 @media (min-width: 500px) {
   .project-details {
     margin-top: 2rem;
-    box-shadow: 16px 16px 1px rgba(0 0 0 / 0.25);
+    box-shadow: 16px 16px 1px rgba(0 0 0 / 0.35);
   }
+
   .illustration-container {
     display: unset;
   }
@@ -542,13 +571,15 @@ Desktop-first makes it easier to encapsulate this behavior */
 } /* End of media query */
 
 .project-container li img {
+  --border-color: rgb(43, 30, 89);
   width: min(186px, 50vw);
   height: min(186px, 50vw);
 
   border-radius: 100%;
-  border: 8px solid rgb(43, 30, 89);
+  border: 8px solid var(--border-color);
 
   position: relative;
+  z-index: -1;
 }
 
 @media (max-width: 500px) {
@@ -642,6 +673,14 @@ Desktop-first makes it easier to encapsulate this behavior */
 @media (min-width: 1000px) {
   .technical-section h2 {
     margin-top: 2em;
+  }
+
+  .project-container li img {
+    transform: translate(-190px, -23px);
+    width: min(320px, 50vw);
+    height: min(320px, 50vw);
+      
+    position: absolute;
   }
 }
 
@@ -770,4 +809,119 @@ footer a:active {
   font-weight: 600;
   text-decoration: none;
   white-space: nowrap;
+}
+
+.modal {
+  --modal-width: min(85vw, 80ch);
+  --modal-height: 85vh;
+  --close-box-size: 60px;
+  transform: translate(-50%, -50%);
+  z-index: 4;
+  border-radius: 16px;
+  background-color: #335;
+  box-shadow: 16px 16px 0 50vmax #0008;
+  position: fixed;
+  display: none;
+  overflow-y: scroll;
+  overscroll-behavior: contain;
+}
+
+.modal::-webkit-scrollbar-thumb {
+  background-color: #557;
+}
+.modal::-webkit-scrollbar-thumb:hover {
+  background-color: #668;
+}
+.modal::-webkit-scrollbar-thumb:active {
+  background-color: #779;
+}
+
+/* Compensate for sticky close button: */
+.modal > :nth-child(2) {
+  margin-top: calc(-1 * var(--close-box-size));
+}
+
+.modal h2,
+.modal h3 {
+  margin-top: 2rem;
+  margin-bottom: 0.5rem;
+}
+
+.modal p {
+  margin-bottom: 1rem;
+}
+
+.modal p:last-of-type {
+  margin-bottom: 3rem;
+}
+
+.modal i {
+  color: var(--header-color);
+  display: block;
+  font-size: 0.9em;
+  margin-top: -0.5rem;
+  margin-bottom: 1.5rem;
+}
+
+.modal a {
+  color: #f18afa;
+  font-weight: 600;
+  font-size: 1.4em;
+  text-decoration: none;
+  display: inline-block;
+  margin-top: 1.5rem;
+}
+
+.modal a + h3 {
+  margin-top: 0.25rem;
+  font-size: 0.9em;
+  font-style: italic;
+}
+
+.modal-close::before,
+.modal-close:hover::before {
+  /* Icon delegated to pseudoelement to avoid z-index issues with position: sticky */
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='gainsboro' class='bi bi-x' viewBox='0 0 16 16'%3E%3Cpath d='M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z'/%3E%3C/svg%3E");
+  background-repeat: no-repeat;
+  background-size: 32px;
+  background-position: 50%;
+}
+
+.modal-close {
+  --close-box-margin: 10px;
+  cursor: pointer;
+  position: sticky;
+  top: 0px;
+  left: 100%;
+  background-color: transparent;
+  width: var(--close-box-size);
+  height: var(--close-box-size);
+  border: none;
+}
+
+.modal-close::before {
+  content: '';
+  width: calc(var(--close-box-size) - 2*var(--close-box-margin));
+  height: calc(var(--close-box-size) - 2*var(--close-box-margin));
+  position: absolute;
+  top: var(--close-box-margin);
+  left: var(--close-box-margin);
+  background-color: #0004;
+  border-radius: 50%;
+}
+
+.modal-close:hover::before {
+  content: '';
+  width: 40px;
+  height: 40px;
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  background-color: #c44;
+  border-radius: 50%;
+}
+
+.modal-content {
+  margin-left: 1.5rem;
+  margin-right: 2.5rem;
 }
